--- a/PilActivity/app/src/main/res/layout/activity_activity2.xml
+++ b/PilActivity/app/src/main/res/layout/activity_activity2.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="it.uniba.di.ivu.sss1415.pilactivity.Activity2">
 
-    <TextView android:text="@string/hello_world" android:layout_width="match_parent"
+    <TextView android:text="@string/textActivity2_Welcome" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:id="@+id/textActivity2"
@@ -19,5 +19,18 @@
         android:id="@+id/buttonActivity3"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/textViewActivity2Content"
+        android:id="@+id/textViewActivity2"
+        android:gravity="center"
+        android:textSize="@dimen/abc_text_size_display_2_material"
+        android:textAppearance="@color/bright_foreground_material_light"
+        android:layout_below="@+id/buttonActivity3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="@dimen/activity_vertical_margin" />
 
 </RelativeLayout>
