--- a/PilActivity/app/src/main/res/layout/activity_activity2.xml
+++ b/PilActivity/app/src/main/res/layout/activity_activity2.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:id="@+id/textActivity2"
-        android:textSize="@dimen/abc_text_size_display_2_material" />
+        android:textSize="@dimen/abc_text_size_display_2_material"
+        android:textColor="@color/bright_foreground_material_light"/>
 
     <Button
         android:layout_width="wrap_content"
