--- a/PilActivity/app/src/main/res/layout/activity_activity3.xml
+++ b/PilActivity/app/src/main/res/layout/activity_activity3.xml
@@ -6,7 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="it.uniba.di.ivu.sss1415.pilactivity.Activity3">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/textActivity2Welcome" android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/textActivity3"
+        android:textSize="@dimen/abc_text_size_display_2_material"
+        android:textColor="@color/bright_foreground_material_light"/>
 
 </RelativeLayout>
